reposition of the hambuger menu to avoid the gap between the hamburger menu and fixed header - change top value

--- a/style.css
+++ b/style.css
@@ -664,7 +664,7 @@ main {
     display: flex;
     align-items: flex-start;
     position: fixed;
-    top: 12rem;
+    top: 10rem;
     right: 0;
     max-width: 15.5rem;
     list-style-type: none;
